force-app/main/default/objects/MEDDIC__c/MEDDIC__c.object-meta.xml
<CustomObject>
    <description>MEDDIC captured per deal, held at the account level. "From Opportunity" records mirror the opportunity's MEDDIC fields (kept in sync by the MEDDIC Sync from Opportunity flow; read-only). "Client Success" records are entered by CS from the account and always point at a deal on that account. Built Sep 2026.</description>
    <label>MEDDIC</label>
    <nameField>
        <displayFormat>MEDDIC-{0000}</displayFormat>
        <label>MEDDIC Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MEDDIC Records</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>