force-app/main/default/objects/MEDDIC__c/fields/Baseline__c.field-meta.xml
<CustomField>
    <fullName>Baseline__c</fullName>
    <description>Measurement (Stage 4): where the client is today, e.g. ~40% capture rate, 4 officers / 12 zones.</description>
    <label>Baseline</label>
    <length>255</length>
    <type>Text</type>
</CustomField>