force-app/main/default/objects/MEDDIC__c/fields/Champion__c.field-meta.xml
<CustomField>
    <fullName>Champion__c</fullName>
    <description>Mirrors Opportunity.Champion__c on From Opportunity records.</description>
    <label>Champion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>