force-app/main/default/objects/MEDDIC__c/fields/Compelling_Event__c.field-meta.xml
<CustomField>
    <fullName>Compelling_Event__c</fullName>
    <description>MEDDICC compelling event. Mirrors Opportunity.Compelling_Reason_Event_to_Close_in_Q__c (Reason to Close in Q) on From Opportunity records.</description>
    <label>Compelling Event</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>