force-app/main/default/objects/MEDDIC__c/fields/Competition__c.field-meta.xml
<CustomField>
    <fullName>Competition__c</fullName>
    <description>MEDDICC competition. Mirrors Opportunity.Deal_Competition__c on From Opportunity records.</description>
    <label>Competition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>