force-app/main/default/objects/MEDDIC__c/fields/CS_Notes__c.field-meta.xml
<CustomField>
    <fullName>CS_Notes__c</fullName>
    <description>Free-form Client Success notes; the sync flow never touches this field.</description>
    <label>CS Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>