force-app/main/default/objects/MEDDIC__c/fields/CSM_Commentary__c.field-meta.xml
<CustomField>
    <fullName>CSM_Commentary__c</fullName>
    <description>Status (Stage 4): CSM commentary from the latest review.</description>
    <label>CSM Commentary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>