force-app/main/default/objects/MEDDIC__c/fields/Decision_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Decision_Criteria__c</fullName>
    <description>Mirrors Opportunity.Decision_Criteria__c on From Opportunity records.</description>
    <label>Decision Criteria</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>