force-app/main/default/objects/MEDDIC__c/fields/Decision_Process__c.field-meta.xml
<CustomField>
    <fullName>Decision_Process__c</fullName>
    <description>Mirrors Opportunity.Decision_Process__c on From Opportunity records.</description>
    <label>Decision Process</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>