force-app/main/default/objects/MEDDIC__c/fields/Desired_Business_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Desired_Business_Outcome__c</fullName>
    <description>Client Objectives (Stage 4): the business outcome the client expects Passport to deliver.</description>
    <label>Desired Business Outcome</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>