force-app/main/default/objects/MEDDIC__c/fields/Economic_Buyer__c.field-meta.xml
<CustomField>
    <fullName>Economic_Buyer__c</fullName>
    <description>Mirrors Opportunity.Economic_Buyer__c on From Opportunity records.</description>
    <label>Economic Buyer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>