force-app/main/default/objects/MEDDIC__c/fields/Executive_Priorities__c.field-meta.xml
<CustomField>
    <fullName>Executive_Priorities__c</fullName>
    <description>Qualitative Success (Stage 4).</description>
    <label>Executive Priorities</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>