force-app/main/default/objects/MEDDIC__c/fields/Identify_Pain__c.field-meta.xml
<CustomField>
    <fullName>Identify_Pain__c</fullName>
    <description>Mirrors Opportunity.Identify_Pain__c on From Opportunity records.</description>
    <label>Identify Pain</label>
    <length>50000</length>
    <type>Html</type>
</CustomField>