force-app/main/default/objects/MEDDIC__c/fields/Last_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>Last_Reviewed__c</fullName>
    <description>Status (Stage 4): date of the last CSM success review.</description>
    <label>Last Reviewed</label>
    <type>Date</type>
</CustomField>