force-app/main/default/objects/MEDDIC__c/fields/Last_Synced__c.field-meta.xml
<CustomField>
    <fullName>Last_Synced__c</fullName>
    <description>Set by the MEDDIC Sync from Opportunity flow on every copy. Also the key the read-only rule uses: an edit to a From Opportunity record that does not change this field is rejected.</description>
    <label>Last Synced</label>
    <type>DateTime</type>
</CustomField>