force-app/main/default/objects/MEDDIC__c/fields/Measurement_Source__c.field-meta.xml
<CustomField>
    <fullName>Measurement_Source__c</fullName>
    <description>Measurement (Stage 4): where the metric is read from, e.g. LPR system reports, officer deployment logs.</description>
    <label>Measurement Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>