force-app/main/default/objects/MEDDIC__c/fields/Metrics__c.field-meta.xml
<CustomField>
    <fullName>Metrics__c</fullName>
    <description>Mirrors Opportunity.Metrics__c on From Opportunity records.</description>
    <label>Metrics</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>