force-app/main/default/objects/MEDDIC__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>Cascade</deleteConstraint>
    <description>The deal this MEDDIC record describes. Required on every record; must belong to the same account.</description>
    <label>Opportunity</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Choose an opportunity that belongs to this account.</errorMessage>
        <filterItems>
            <field>Opportunity.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>MEDDIC</relationshipLabel>
    <relationshipName>MEDDIC_Records</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>