force-app/main/default/objects/MEDDIC__c/fields/Opportunity_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Created_Date__c</fullName>
    <description>Date the source opportunity was created. Stored (not a formula) so the MEDDIC related list on the Account can be sorted by it. Set by the MEDDIC sync flows when a mirror is created or updated, and by the Sep 2026 backfill. Added 2026-09-24 per Aaron.</description>
    <inlineHelpText>When the deal this record belongs to was created. Sort the account's MEDDIC list by this to read the history in order.</inlineHelpText>
    <label>Opportunity Created Date</label>
    <type>Date</type>
</CustomField>