force-app/main/default/objects/MEDDIC__c/fields/Primary_Pain_Point__c.field-meta.xml
<CustomField>
    <fullName>Primary_Pain_Point__c</fullName>
    <description>Client Objectives (Cecily lifecycle framework, Stage 4): the pain point driving the purchase, validated at kickoff.</description>
    <label>Primary Pain Point</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>