force-app/main/default/objects/MEDDIC__c/fields/Primary_Success_Metric__c.field-meta.xml
<CustomField>
    <fullName>Primary_Success_Metric__c</fullName>
    <description>Measurement (Stage 4): the metric that demonstrates success, e.g. LPR capture rate.</description>
    <label>Primary Success Metric</label>
    <length>255</length>
    <type>Text</type>
</CustomField>