force-app/main/default/objects/MEDDIC__c/fields/Secondary_Metrics__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Metrics__c</fullName>
    <description>Measurement (Stage 4): other metrics to watch after launch.</description>
    <label>Secondary Metrics</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>