force-app/main/default/objects/MEDDIC__c/fields/Secondary_Outcomes__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Outcomes__c</fullName>
    <description>Client Objectives (Stage 4): additional outcomes the client expects.</description>
    <label>Secondary Outcomes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>