force-app/main/default/objects/MEDDIC__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>From Opportunity = mirror of the opportunity's MEDDIC fields, maintained by the sync flow. Client Success = entered by CS from the account.</description>
    <label>Source</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>From Opportunity</fullName>
            </value>
            <value>
                <fullName>Client Success</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>