force-app/main/default/objects/MEDDIC__c/fields/Strategic_Considerations__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Considerations__c</fullName>
    <description>Qualitative Success (Stage 4).</description>
    <label>Strategic Considerations</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>