force-app/main/default/objects/MEDDIC__c/fields/Success_Status__c.field-meta.xml
<CustomField>
    <fullName>Success_Status__c</fullName>
    <description>Status (Stage 4): how the client is tracking against the agreed success definition. Reviewed every 3 months.</description>
    <label>Success Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>On Track</fullName><default>false</default><label>On Track</label></value>
            <value><fullName>At Risk</fullName><default>false</default><label>At Risk</label></value>
            <value><fullName>Achieved</fullName><default>false</default><label>Achieved</label></value>
            <value><fullName>Not Yet Measurable</fullName><default>false</default><label>Not Yet Measurable</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>