force-app/main/default/objects/MEDDIC__c/fields/Target__c.field-meta.xml
<CustomField>
    <fullName>Target__c</fullName>
    <description>Measurement (Stage 4): where the client wants to be, e.g. 80%+ capture rate with 2 officers.</description>
    <label>Target</label>
    <length>255</length>
    <type>Text</type>
</CustomField>