force-app/main/default/objects/MEDDIC__c/fields/Twelve_Months_From_Now__c.field-meta.xml
<CustomField>
    <fullName>Twelve_Months_From_Now__c</fullName>
    <description>Qualitative Success (Stage 4): the client&#x27;s answer to &quot;12 months after launch, what would need to be true to say Passport was the right decision?&quot;</description>
    <label>12 Months From Now</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>