force-app/main/default/objects/MEDDIC__c/fields/Why_Passport__c.field-meta.xml
<CustomField>
    <fullName>Why_Passport__c</fullName>
    <description>Client Objectives (Cecily lifecycle framework). Mirrors Opportunity.Why_Passport__c on From Opportunity records; CS validates it on Client Success records.</description>
    <label>Why Passport?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>