force-app/main/default/objects/MEDDIC__c/recordTypes/Client_Success.recordType-meta.xml
<RecordType>
    <fullName>Client_Success</fullName>
    <active>true</active>
    <description>Entered by Client Success from the account; must point at a deal on that account.</description>
    <label>Client Success</label>
</RecordType>