force-app/main/default/objects/MEDDIC__c/recordTypes/From_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>From_Opportunity</fullName>
    <active>true</active>
    <description>Mirror of the opportunity MEDDIC fields, maintained by the MEDDIC Sync from Opportunity flow. Read-only.</description>
    <label>From Opportunity</label>
</RecordType>